avformat/avienc: Expand master ODML index when its end is reached

Fixes 256Gb limit
Fixes Ticket4225

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>